# BilateralBlueNoisePointcloudSampling

./: CMakeLists.txt
inc/bbn/: augmentation.h  bruteforce_locator.h  dart_throwing.h  differential.h  eigen_types.h  energy_minimization.h  hashtable_locator.h  meta.h  normalization.h  scaling.h  stacking.h  task_traits.h  util.h
src/: augmentation.cpp  normalization.cpp  scaling.cpp
test/: io_pointcloud.h  resample.cpp  resample_image.cpp
